share button mobile placement fix

--- a/frontend-next-migration/src/preparedPages/NewsPages/ui/NewsElementPage/ui/NewsElementPage.module.scss
+++ b/frontend-next-migration/src/preparedPages/NewsPages/ui/NewsElementPage/ui/NewsElementPage.module.scss
@@ -177,6 +177,9 @@
     align-self: flex-start;
     padding: 0 5em; 
     margin-top: 16px;
+    @media (max-width: breakpoint(md)) {
+        padding: 0 1em;
+    }
 }
 
 .author {
